--- a/mysite/assets/scss/components/_breadcrumbs.scss
+++ b/mysite/assets/scss/components/_breadcrumbs.scss
@@ -13,7 +13,16 @@
 
 .breadcrumbs {
   position: relative;
+  overflow: hidden;
   top: -27px;
+  float: left;
+  text-overflow: clip;
+  white-space: nowrap;
+
+  @media screen and (max-width: 1100px ) {
+    width: 600px;
+  }
+
   li {
     display: inline-block;
     float: none;
